--- a/index.html
+++ b/index.html
@@ -99,9 +99,53 @@
             </p>
         </div>
     </div>
-
     </main>
-    
+    <section data-bs-theme="light">
+      <h2 class="display-3 fw-bold my-5 text-center">Educación</h2>
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-10 col-lg-7 ms-1">
+          <div id="carouselExampleCaptions" class="carousel slide ">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active ">
+                <img src="./assets/img/electronica.webp" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-block bg-dark opacity-75 rounded">
+                  <h3>Técnico en Electrónica</h3>
+                  <p>Liceo Tecnico Industrial Hardware, con cursos de domotica, PLC, robotica y computación.</</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/redes.webp" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-block bg-dark opacity-75 rounded">
+                  <h3>Redes y Telecomunicaciones</h3>
+                  <p>Instituto INACAP, Tecnico en Redes y Telecomunicaciones.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/img/auto.webp" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-block bg-dark opacity-75 rounded">
+                  <h3>Automatizacion y Control de Procesos</h3>
+                  <p>Instituto IACC Modalidad Online Asincronica, carrera técnica.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon bg-dark rounded" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon bg-dark rounded" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
+      
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
