--- a/index.html
+++ b/index.html
@@ -59,48 +59,50 @@
           </div>
         </div>
     </section>
-    <main id="Acerca-de-mi" class="container text-center my-5">
+    <main class="container-fluid bg-dark">
+      <div id="Acerca-de-mi" class="container text-center my-0 py-4 text-light">
 
 
-      <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
-
-      <p class="my-4">
-          Soy autodidacta, inquieto cuando se trata de aprender algo nuevo, multifacetico por naturaleza, informatico electronico de profesión, aunque he indagado en otros mundos como la mecanica, las finanzas e inversiones. Creo en la tecnologia al servicio de la humanidad, utilizada con inteligencia, equilibrio y sabiduria, en pro de la autosustentabilidad y eficiencia.
-      </p>
-      <div class="row">
-        <div class="col-12 col-md-4">
-            <i class="fa-solid fa-heart-circle-plus fa-3x my-3"></i>
-            <h3 class="my-3 fw-bold">Apasionado de las tecnologias</h3>
-            <p class="my-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.
-            </p>
-        </div>
-        <div class="col-12 col-md-4">
-            <i class="fa-solid fa-brain fa-3x my-3"></i>
-            <h3 class="my-3 fw-bold">Maestro de la programacion</h3>
-            <p class="my-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.
-            </p>
-        </div>
-        <div class="col-12 col-md-4">
-            <i class="fa-solid fa-dragon fa-3x my-3"></i>
-            <h3 class="my-3 fw-bold">Autodidacta por naturaleza</h3>
-            <p class="my-3">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.
-            </p>
-        </div>
-    </div>
+        <h2 class="display-3 fw-bold py-4">Acerca de mi</h2>
+  
+        <p class="my-4">
+            Soy autodidacta, inquieto cuando se trata de aprender algo nuevo, multifacetico por naturaleza, informatico electronico de profesión, aunque he indagado en otros mundos como la mecanica, las finanzas e inversiones. Creo en la tecnologia al servicio de la humanidad, utilizada con inteligencia, equilibrio y sabiduria, en pro de la autosustentabilidad y eficiencia.
+        </p>
+        <div class="row">
+          <div class="col-12 col-md-4">
+              <i class="fa-solid fa-heart-circle-plus fa-3x my-3"></i>
+              <h3 class="my-3 fw-bold">Apasionado de las tecnologias</h3>
+              <p class="my-3">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat.
+              </p>
+          </div>
+          <div class="col-12 col-md-4">
+              <i class="fa-solid fa-brain fa-3x my-3"></i>
+              <h3 class="my-3 fw-bold">Maestro de la programacion</h3>
+              <p class="my-3">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat.
+              </p>
+          </div>
+          <div class="col-12 col-md-4">
+              <i class="fa-solid fa-dragon fa-3x my-3"></i>
+              <h3 class="my-3 fw-bold">Autodidacta por naturaleza</h3>
+              <p class="my-3">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat.
+              </p>
+          </div>
+      </div>
+      </div>
     </main>
-    <section data-bs-theme="light">
+    <section data-bs-theme="light" class="mb-5 pb-5">
       <h2 class="display-3 fw-bold my-5 text-center">Educación</h2>
       <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-7 ms-1">
@@ -144,8 +146,42 @@
           </div>
         </div>
       </div>
-      
     </section>
+    <article class="bg-secondary py-5">
+      <h2 class="display-3 fw-bold text-center pb-5 text-light">Experiencia</h2>
+      <div class="accordion  container" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              <strong>Técnico en redes</strong>
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Accordion Item #2
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Accordion Item #3
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+          </div>
+        </div>
+      </div>
+    </article>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
