--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
               <p class="card-text txt-gris mb-0">Telefono: +56 9 69651049</p>
               <p class="card-text txt-gris mb-0">Correo: alfresal88@gmail.com</p>
               <p class="card-text txt-gris mb-0">Dirección: Santiago, Chile.</p>
+              <p class="card-text txt-gris mb-0">Licencia de Conducir: B / C.</p>
               <hr>
               <div class="d-flex justify-content-center">
                 <a href="https://x.com/11jose_alfredo" target="_blank" title="X"><i class="fa-solid fa-x pt-1 px-3"></i></a>
@@ -64,7 +65,6 @@
 
 
         <h2 class="display-3 fw-bold py-4">Acerca de mi</h2>
-  
         <p class="my-4">
             Soy autodidacta, inquieto cuando se trata de aprender algo nuevo, multifacetico por naturaleza, informatico electronico de profesión, aunque he indagado en otros mundos como la mecanica, las finanzas e inversiones. Creo en la tecnologia al servicio de la humanidad, utilizada con inteligencia, equilibrio y sabiduria, en pro de la autosustentabilidad y eficiencia.
         </p>
@@ -131,7 +131,7 @@
                 <img src="./assets/img/auto.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block bg-dark opacity-75 rounded">
                   <h3>Automatizacion y Control de Procesos</h3>
-                  <p>Instituto IACC Modalidad Online Asincronica, carrera técnica.</p>
+                  <p>Instituto IACC Modalidad Online Asincronica, carrera técnica. Programación en <code>PHP</code>.</p>
                 </div>
               </div>
             </div>
@@ -149,35 +149,92 @@
     </section>
     <article class="bg-secondary py-5">
       <h2 class="display-3 fw-bold text-center pb-5 text-light">Experiencia</h2>
+      <p class="mb-5 container text-light">
+        Mas de 10 años de experiencia en soporte tecnico, manejo de  software y hardware, telecomunicaciones (redes lan, fibra optica), atención a clientes por distintos medios (correo, telefónico, presencial).
+    </p>
       <div class="accordion  container" id="accordionFlushExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              <strong>Técnico en redes</strong>
+              <strong>Diciembre 2008 - Julio 2014</strong>. Soporte Técnico Informático (Remoto y Presencial)
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+            <div class="accordion-body">
+              <p>6 Años trabajando para IBM, prestando servicios (en distintos periodos) para Clientes como:
+              </p>
+              <ul>
+                <li>BANCO SANTANDER.</li>
+                <li>Multinacional BHP BILLITON</li>
+                <li>ISBAN</li>
+              </ul>
+               </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-              Accordion Item #2
+              <strong>Septiembre 2014 - Enero 2018</strong>. Soporte Técnico Informático
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+            <div class="accordion-body"><p>4 Años trabajando para OpenPartner/Coasin, prestando servicios para el cliente  Red Salud UC CHRISTUS. Efectuando labores como:
+            </p>
+            <ul>
+              <li>Soporte Terreno Centros Medicos y Clinicas.</li>
+              <li>Soporte Residente</li>
+              <li>Ejecucion de Proyectos de renovación e implementación</li>
+            </ul> </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-              Accordion Item #3
+              <strong>Julio 2022 - Octubre 2023</strong>. Soporte Técnico Informático Remoto
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+            <div class="accordion-body">1 Año trabajando para TIVIT, prestando servicios para el cliente BANMEDICA a traves de sus filiales:
+            </p>
+            <ul>
+              <li>VidaIntegra</li>
+              <li>Clinica Santa Maria</li>
+              <li>Clinica Davila</li>
+              <li>Clinica Vespucio</li>
+              <li>Clinica Ciudad del Mar</li>
+              <li>Clinica Biobio</li>
+            </ul>
+            <p>Atención vía telefónica y por correo
+              electrónico, modalidad teletrabajo. Gestión de plataformas y sistemas internos de
+              cada filial, llevando a cabo solicitudes de los trabajadores y solucionando
+              inconvenientes.</p>
+          </div>
+          </div>
+        </div>
+      </div>
+      <div class="accordion container pt-4" id="accordionFlushExample">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsefour" aria-expanded="false" aria-controls="flush-collapsefour">
+              <strong>Habilidades:</strong>
+            </button>
+          </h2>
+          <div id="flush-collapsefour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body">
+              <p>Dentro de todas las labores que realicé para las distintas empresas, especifico las de interés común:
+              </p>
+              <ul>
+                <li>Manejo de habilidades blandas para una eficaz comunicación con el cliente.</li>
+                <li>Conocimiento avanzado en sistemas de ofimática: Office 365, Office 2019, etc.</li>
+                <li>Atención y Administración de tickets de atención, de acuerdo a tiempos, prioridades e importancia.</li>
+                <li>Instalacióny Configuración  de Software y Hardware (Sistemas Operativos, Aplicaciones Corporativas, Computadores, Impresoras, etc.)</li>
+                <li>Mantención, Reparación y Configuración de equipos (Desktop, Laptop, Impresoras, Router, etc).</li>
+                <li>Instalación/Configuración de Aplicaciones Corporativas (Correo Exchange, Gestión de usuarios,
+                  Dominios, Etc.)</li>
+                <li>Configuración de Redes: Protocolos, direccionamiento, seguridad, etc.</li>
+                <li>Instalación y Reparación de Fibra Óptica.</li>
+              </ul>
+               </div>
           </div>
         </div>
       </div>
