--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="container-fluid bg-dark my-">
       <nav class="container navbar navbar-expand-lg bg-dark"; data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt="Logo" width="200" height="40"></a>
+          <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo.png" alt="Logo" width="200" height="40"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,7 +28,7 @@
                 <a class="nav-link active" href="#">Experiencia</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Portafolio</a>
+                <a class="nav-link active" href="./portafolio.html" target="_blank">Portafolio</a>
               </li>
             </ul>
           </div>
@@ -36,7 +36,7 @@
       </nav>
     </header>
     <section class="bgportada pt-1 pb-5">
-      <div class="container row rounded justify-content-end my-5">
+      <div class="row justify-content-end my-5 container">
         <div class="col-11 col-md-6 col-lg-4">
           <div class="card">
             <img src="./assets/img/photo.jpg" class="card-img-top" alt="card1">
@@ -73,30 +73,21 @@
               <i class="fa-solid fa-heart-circle-plus fa-3x my-3"></i>
               <h3 class="my-3 fw-bold">Apasionado de las tecnologias</h3>
               <p class="my-3">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat.
+                  Me gusta indagar en nuevas formas de trabajar con la tecnologia de vanguardia, bajo un prisma de automatizar y facilitar la forma de hacer las cosas.
               </p>
           </div>
           <div class="col-12 col-md-4">
               <i class="fa-solid fa-brain fa-3x my-3"></i>
-              <h3 class="my-3 fw-bold">Maestro de la programacion</h3>
+              <h3 class="my-3 fw-bold">Desarrollo Personal</h3>
               <p class="my-3">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat.
+                  Considero que tenemos una compleja herramienta que es nuestra mente, la cual podemos aprovechar de forma positiva para estar en constante progreso de nuestras habilidades, es por ello que toda situación o circunstancia para mi contribuye al crecimiento.
               </p>
           </div>
           <div class="col-12 col-md-4">
               <i class="fa-solid fa-dragon fa-3x my-3"></i>
               <h3 class="my-3 fw-bold">Autodidacta por naturaleza</h3>
               <p class="my-3">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                  ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat.
+                  Desde pequeño he tenido el impulso de saber como funcionan las cosas, y esto me ha llevado a tener cultivar la voluntad e interes por interiorizar en profundidad y por cuenta propia en algo que me llame la atención.
               </p>
           </div>
       </div>
