--- a/portafolio.html
+++ b/portafolio.html
@@ -12,7 +12,7 @@
     <header class="container-fluid bg-dark my-">
       <nav class="container navbar navbar-expand-lg bg-dark"; data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="./assets/img/logo.png" alt="Logo" width="200" height="40"></a>
+          <a class="navbar-brand" href="./index.html"><img src="./assets/img/logo.png" alt="Logo" width="200" height="40"></a>
         </div>
       </nav>
     </header>
