--- a/portafolio.html
+++ b/portafolio.html
@@ -16,7 +16,6 @@
         </div>
       </nav>
     </header>
-    
     <main class="container-fluid bg-secondary">
       <div id="Acerca-de-mi" class="container text-center my-0 py-4 text-light">
 
@@ -25,7 +24,7 @@
         <p class="my-4">
             A continuación verán un vista previa de cada Desafio con una breve descripción de la Unidad. Ademas podrán darle click o tocar al boton de cada desafio para ir el trabajo completado.
         </p>
-        <section class="container my-4"><!--Aqui va la grilla con las crads dentro-->
+        <section class="container my-4">
           <div class="row justify-content-center g-4"><!--centrado por si alguna grilla queda sola, y con gap entre ellas-->
             <div class="col-12 col-md-6 col-lg-4"><!--Responsividad para celular, tablet y pc-->
               <div class="card">
@@ -35,7 +34,7 @@
                   <p class="card-text txt-gris mb-0">En este Desafio se creó nuestra primera pagina web utilizando codigo <code>HTML</code>.</p>
                   <hr>
                   <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button>
+                    <a href="https://alfredosalgado.github.io/desafio1/" target="_blank"><button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button></a>
                   </div>
                 </div>
               </div>
