--- a/portafolio.html
+++ b/portafolio.html
@@ -47,7 +47,7 @@
                   <p class="card-text txt-gris mb-0">En este Desafio se creó nuestra primera Landing Page utilizando <code>HTML</code> y <code>CSS</code>.</p>
                   <hr>
                   <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button>
+                    <a href="https://alfredosalgado.github.io/desafio2/"><button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button></a>
                   </div>
                 </div>
               </div>
@@ -60,7 +60,7 @@
                   <p class="card-text txt-gris mb-0">En este Desafio se creó una pagina con galerias utilizando <code>Flex</code></p>
                   <hr>
                   <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button>
+                    <a href="https://alfredosalgado.github.io/desafio3/"><button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button></a>
                   </div>
                 </div>
               </div>
@@ -86,7 +86,7 @@
                   <p class="card-text txt-gris mb-0">En este Desafio se forkeo y clonó una pagina de web utilizando el terminal <code>Git Bash</code> y la plataforma Github</p>
                   <hr>
                   <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button>
+                    <a href="https://alfredosalgado.github.io/fdsw-github/"><button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button></a>
                   </div>
                 </div>
               </div>
