--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-    </section>
+    </div></section>
     <main class="container-fluid bg-dark">
       <div id="Acerca-de-mi" class="container text-center my-0 py-4 text-light">
 
@@ -93,7 +93,7 @@
       </div>
       </div>
     </main>
-    <section data-bs-theme="light" class="mb-5 pb-5">
+    <section data-bs-theme="light" class="mb-0 pb-5">
       <h2 class="display-3 fw-bold my-5 text-center">Educación</h2>
       <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-7 ms-1">
@@ -142,7 +142,7 @@
       <h2 class="display-3 fw-bold text-center pb-5 text-light">Experiencia</h2>
       <p class="mb-5 container text-light">
         Mas de 10 años de experiencia en soporte tecnico, manejo de  software y hardware, telecomunicaciones (redes lan, fibra optica), atención a clientes por distintos medios (correo, telefónico, presencial).
-    </p>
+      </p>
       <div class="accordion  container" id="accordionFlushExample">
         <div class="accordion-item">
           <h2 class="accordion-header">
