--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Sobre mi</a>
+                <a class="nav-link active" href="#sobremi">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Educación</a>
+                <a class="nav-link active" href="#educacion">Educación</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Experiencia</a>
+                <a class="nav-link active" href="#experiencia">Experiencia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="./portafolio.html" target="_blank">Portafolio</a>
@@ -60,7 +60,7 @@
           </div>
         </div>
     </div></section>
-    <main class="container-fluid bg-dark">
+    <main id="sobremi" class="container-fluid bg-dark">
       <div id="Acerca-de-mi" class="container text-center my-0 py-4 text-light">
 
 
@@ -93,7 +93,7 @@
       </div>
       </div>
     </main>
-    <section data-bs-theme="light" class="mb-0 pb-5">
+    <section id="educacion" data-bs-theme="light" class="mb-0 pb-5">
       <h2 class="display-3 fw-bold my-5 text-center">Educación</h2>
       <div class="row justify-content-center">
         <div class="col-12 col-md-10 col-lg-7 ms-1">
@@ -138,7 +138,7 @@
         </div>
       </div>
     </section>
-    <article class="bg-secondary py-5">
+    <article id="experiencia" class="bg-secondary py-5">
       <h2 class="display-3 fw-bold text-center pb-5 text-light">Experiencia</h2>
       <p class="mb-5 container text-light">
         Mas de 10 años de experiencia en soporte tecnico, manejo de  software y hardware, telecomunicaciones (redes lan, fibra optica), atención a clientes por distintos medios (correo, telefónico, presencial).
