--- a/portafolio.html
+++ b/portafolio.html
@@ -73,7 +73,7 @@
                   <p class="card-text txt-gris mb-0">En este Desafio se creó una pagina de cupones utilizando el Framework <code>Boostrap</code></p>
                   <hr>
                   <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button>
+                    <a href="https://alfredosalgado.github.io/desafio4/"><button type="button" class="btn btn-dark btn-lg">Ingresar al Desafio</button></a>
                   </div>
                 </div>
               </div>
