--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           <div class="card">
             <img src="./assets/img/photo.jpg" class="card-img-top" alt="card1">
             <div class="card-body">
-              <h5 class="card-title">Jose Alfredo Salgado Riquelme</h5>
+              <h5 class="card-title">José Alfredo Salgado Riquelme</h5>
               <p class="card-text txt-gris mb-0">Fecha de Nacimiento: 11/05/1988</p>
               <p class="card-text txt-gris mb-0">Nacionalidad: Chilena</p>
-              <p class="card-text txt-gris mb-0">Telefono: +56 9 69651049</p>
+              <p class="card-text txt-gris mb-0">Teléfono: +56 9 69651049</p>
               <p class="card-text txt-gris mb-0">Correo: alfresal88@gmail.com</p>
               <p class="card-text txt-gris mb-0">Dirección: Santiago, Chile.</p>
               <p class="card-text txt-gris mb-0">Licencia de Conducir: B / C.</p>
@@ -66,7 +66,7 @@
 
         <h2 class="display-3 fw-bold py-4">Acerca de mi</h2>
         <p class="my-4">
-            Me considero alguien autodidacta, inquieto cuando se trata de aprender algo nuevo, multifacetico por naturaleza, informatico electronico de profesión, aunque he indagado en otros mundos como las telecomunicaciones, la automatización, mecanica, las finanzas e inversiones. Creo en los avances tecnologicos al servicio de la humanidad, utilizada con inteligencia, equilibrio y sabiduria, en pro de la autosustentabilidad y eficiencia.
+            Me considero alguien autodidacta, inquieto cuando se trata de aprender algo nuevo, multifacetico por naturaleza, informatico electronico de profesión, aunque he indagado en otros campos como las telecomunicaciones, la automatización, mecanica, las finanzas e inversiones. Creo en los avances tecnológicos al servicio de la humanidad, utilizada con inteligencia, equilibrio y sabiduría, en pro de la autosustentabilidad y eficiencia.
         </p>
         <div class="row">
           <div class="col-12 col-md-4">
@@ -80,14 +80,14 @@
               <i class="fa-solid fa-brain fa-3x my-3"></i>
               <h3 class="my-3 fw-bold">Desarrollo Personal</h3>
               <p class="my-3">
-                  Considero que tenemos una compleja herramienta que es nuestra mente, la cual podemos aprovechar de forma positiva para estar en constante progreso de nuestras habilidades, es por ello que toda situación o circunstancia para mi contribuye al crecimiento.
+                  Tenemos una compleja herramienta que es nuestra mente, la cual podemos aprovechar de forma positiva para estar en constante progreso de nuestras habilidades, es por ello que toda situación o circunstancia para mi contribuye al crecimiento.
               </p>
           </div>
           <div class="col-12 col-md-4">
               <i class="fa-solid fa-dragon fa-3x my-3"></i>
               <h3 class="my-3 fw-bold">Autodidacta por naturaleza</h3>
               <p class="my-3">
-                  Desde pequeño he tenido el impulso de saber como funcionan las cosas, y esto me ha llevado a tener cultivar la voluntad e interes por interiorizar en profundidad y por cuenta propia en algo que me llame la atención.
+                  Desde pequeño he tenido el impulso de saber como funcionan las cosas, y esto me ha llevado a cultivar la voluntad e interes por interiorizar en profundidad y por cuenta propia en algo que me llame la atención.
               </p>
           </div>
       </div>
@@ -108,20 +108,20 @@
                 <img src="./assets/img/electronica.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block bg-dark opacity-75 rounded">
                   <h3>Técnico en Electrónica</h3>
-                  <p>Liceo Tecnico Industrial Hardware, con cursos de domotica, PLC, robotica y computación.</</p>
+                  <p>Liceo Tecnico Industrial Hardware, con cursos de Domótica, PLC, Robótica y Computación.</</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./assets/img/redes.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block bg-dark opacity-75 rounded">
                   <h3>Redes y Telecomunicaciones</h3>
-                  <p>Instituto INACAP, Tecnico en Redes y Telecomunicaciones.</p>
+                  <p>Instituto INACAP, Técnico en Redes y Telecomunicaciones.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./assets/img/auto.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-block bg-dark opacity-75 rounded">
-                  <h3>Automatizacion y Control de Procesos</h3>
+                  <h3>Automatización y Control de Procesos</h3>
                   <p>Instituto IACC Modalidad Online Asincronica, carrera técnica. Programación en <code>PHP</code>.</p>
                 </div>
               </div>
@@ -141,7 +141,7 @@
     <article id="experiencia" class="bg-secondary py-5">
       <h2 class="display-3 fw-bold text-center pb-5 text-light">Experiencia</h2>
       <p class="mb-5 container text-light">
-        Mas de 10 años de experiencia en soporte tecnico, manejo de  software y hardware, telecomunicaciones (redes lan, fibra optica), atención a clientes por distintos medios (correo, telefónico, presencial).
+        Más de 10 años de experiencia en soporte técnico, manejo de  software y hardware, telecomunicaciones (redes Lan, fibra óptica), atención a clientes por distintos medios (correo, telefónico, presencial).
       </p>
       <div class="accordion  container" id="accordionFlushExample">
         <div class="accordion-item">
@@ -233,7 +233,7 @@
     <section class="bg-dark pb-5">
       <h2 class="display-3 fw-bold text-center py-5 text-light">Portafolio</h2>
       <p class="mb-5 container text-light">
-        A continuación podran ingresar al Portafolio correspondiente a la carrera de Desarrollador FullScript, el cual contiene todos los proyectos realizados en cada Modulo.
+        El siguiente boton es para ingresar al Portafolio correspondiente a la carrera de Desarrollador FullScript, el cual contiene todos los proyectos realizados en cada Unidad.
       </p>
       <a href="./portafolio.html" target="_blank" title="Clickea/Toca para acceder al Portafolio">
       <div class="d-grid gap-2 container">
