--- a/portafolio.html
+++ b/portafolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CV Jose Alfredo Salgado Riquelme</title>
+    <title>Portafolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -22,7 +22,7 @@
 
         <h2 class="display-3 fw-bold py-4">Portafolio</h2>
         <p class="my-4">
-            A continuación verán un vista previa de cada Desafio con una breve descripción de la Unidad. Ademas podrán darle click o tocar al boton de cada desafio para ir el trabajo completado.
+            Vista previa de cada Desafio con una breve descripción de la Unidad. Se puede ingresar a ver el desafio en el botón que aparece en cada vista previa.
         </p>
         <section class="container my-4">
           <div class="row justify-content-center g-4"><!--centrado por si alguna grilla queda sola, y con gap entre ellas-->
