modificacion card portada

--- a/index.html
+++ b/index.html
@@ -35,31 +35,34 @@
         </div>
       </nav>
     </header>
-    <section class="bgportada pt-1 pb-5">
-      <div class="row justify-content-end my-5 container">
-        <div class="col-11 col-md-6 col-lg-4">
-          <div class="card">
-            <img src="./assets/img/photo.jpg" class="card-img-top" alt="card1">
-            <div class="card-body">
-              <h5 class="card-title">José Alfredo Salgado Riquelme</h5>
-              <p class="card-text txt-gris mb-0">Fecha de Nacimiento: 11/05/1988</p>
-              <p class="card-text txt-gris mb-0">Nacionalidad: Chilena</p>
-              <p class="card-text txt-gris mb-0">Teléfono: +56 9 69651049</p>
-              <p class="card-text txt-gris mb-0">Correo: alfresal88@gmail.com</p>
-              <p class="card-text txt-gris mb-0">Dirección: Santiago, Chile.</p>
-              <p class="card-text txt-gris mb-0">Licencia de Conducir: B / C.</p>
-              <hr>
-              <div class="d-flex justify-content-center">
-                <a href="https://x.com/11jose_alfredo" target="_blank" title="X"><i class="fa-solid fa-x pt-1 px-3"></i></a>
-                <a href="https://www.instagram.com/joshegram" target="_blank" title="Instagram"><i class="fa-brands fa-square-instagram pt-1 px-3"></i></a>
-                <a href="https://www.linkedin.com/in/alfredo-salgado-riquelme-425aa830/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin pt-1 px-3"></i></a>
-                <a href="https://wa.me/message/RP6ITSACWIYMM1" target="_blank" title="Whatsapp"><i class="fa-brands fa-whatsapp pt-1 px-3"></i></a>
-                <a href="https://t.me/JoseAlfredo88" target="_blank" title="Telegram"><i class="fa-brands fa-telegram pt-1 px-3"></i></a>
+    <section class="container-fluid bgportada pt-1 pb-5">
+      <div class="container">
+        <div class="row justify-content-end my-5">
+          <div class="col-11 col-md-6 col-lg-4">
+            <div class="card">
+              <img src="./assets/img/photo.jpg" class="card-img-top" alt="card1">
+              <div class="card-body">
+                <h5 class="card-title">José Alfredo Salgado Riquelme</h5>
+                <p class="card-text txt-gris mb-0">Fecha de Nacimiento: 11/05/1988</p>
+                <p class="card-text txt-gris mb-0">Nacionalidad: Chilena</p>
+                <p class="card-text txt-gris mb-0">Teléfono: +56 9 69651049</p>
+                <p class="card-text txt-gris mb-0">Correo: alfresal88@gmail.com</p>
+                <p class="card-text txt-gris mb-0">Dirección: Santiago, Chile.</p>
+                <p class="card-text txt-gris mb-0">Licencia de Conducir: B / C.</p>
+                <hr>
+                <div class="d-flex justify-content-center">
+                  <a href="https://x.com/11jose_alfredo" target="_blank" title="X"><i class="fa-solid fa-x pt-1 px-3"></i></a>
+                  <a href="https://www.instagram.com/joshegram" target="_blank" title="Instagram"><i class="fa-brands fa-square-instagram pt-1 px-3"></i></a>
+                  <a href="https://www.linkedin.com/in/alfredo-salgado-riquelme-425aa830/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin pt-1 px-3"></i></a>
+                  <a href="https://wa.me/message/RP6ITSACWIYMM1" target="_blank" title="Whatsapp"><i class="fa-brands fa-whatsapp pt-1 px-3"></i></a>
+                  <a href="https://t.me/JoseAlfredo88" target="_blank" title="Telegram"><i class="fa-brands fa-telegram pt-1 px-3"></i></a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-    </div></section>
+      </div>
+    </section>
     <main id="sobremi" class="container-fluid bg-dark">
       <div id="Acerca-de-mi" class="container text-center my-0 py-4 text-light">
 
