repo git agregado

--- a/index.html
+++ b/index.html
@@ -51,13 +51,34 @@
                 <p class="card-text txt-gris mb-0">Licencia de Conducir: B / C.</p>
                 <hr>
                 <div class="d-flex justify-content-center">
-                  <a href="https://x.com/11jose_alfredo" target="_blank" title="X"><i class="fa-solid fa-x pt-1 px-3"></i></a>
+                  <a href="https://github.com/alfredosalgado" target="_blank" title="X"><i class="fa-brands fa-github pt-1 px-3"></i></i></a>
+                  <a href="https://x.com/11jose_alfredo" target="_blank" title="GitHub"><i class="fa-solid fa-x pt-1 px-3"></i></a>
                   <a href="https://www.instagram.com/joshegram" target="_blank" title="Instagram"><i class="fa-brands fa-square-instagram pt-1 px-3"></i></a>
                   <a href="https://www.linkedin.com/in/alfredo-salgado-riquelme-425aa830/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin pt-1 px-3"></i></a>
                   <a href="https://wa.me/message/RP6ITSACWIYMM1" target="_blank" title="Whatsapp"><i class="fa-brands fa-whatsapp pt-1 px-3"></i></a>
                   <a href="https://t.me/JoseAlfredo88" target="_blank" title="Telegram"><i class="fa-brands fa-telegram pt-1 px-3"></i></a>
                 </div>
               </div>
+            </div>
+            <div class="d-flex justify-content-center pt-3">
+              <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">Ver Repos Forkeados</button>
+
+<div class="offcanvas offcanvas-end text-bg-dark" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
+  <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Repositorios Forkeados</h5>
+    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <p>Mi Repositorio de este Desafio: <a href="https://github.com/alfredosalgado/jasrcv" target="_blank">https://github.com/alfredosalgado/jasrcv</a></p>
+    <hr>
+    <p>Repositorio Forkeado 1: <a href="https://github.com/alfredosalgado/mgrccv" target="_blank">https://github.com/alfredosalgado/mgrccv</a></p>
+    <p>Registro de commits: <a href="https://github.com/alfredosalgado/mgrccv/commits?author=alfredosalgado" target="_blank"><img class="w-100" src="./assets/img/commits1.png" alt="">Ir al registro de Commits en GituHub</a></p>
+    <hr>
+    <p>Repositorio Forkeado 2: <a href="https://github.com/alfredosalgado/Gealuque.github.io" target="_blank">https://github.com/alfredosalgado/Gealuque.github.io</a></p>
+    <p>Registro de commits: <a href="https://github.com/alfredosalgado/Gealuque.github.io/commits/master/?author=alfredosalgado" target="_blank"><img class="w-100" src="./assets/img/commits2.png" alt="">Ir al registro de Commits en GituHub</a></p>
+  </div>
+</div>
+
             </div>
           </div>
         </div>
