--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <p class="card-text txt-gris mb-0">Licencia de Conducir: B / C.</p>
                 <hr>
                 <div class="d-flex justify-content-center">
-                  <a href="https://github.com/alfredosalgado" target="_blank" title="X"><i class="fa-brands fa-github pt-1 px-3"></i></i></a>
-                  <a href="https://x.com/11jose_alfredo" target="_blank" title="GitHub"><i class="fa-solid fa-x pt-1 px-3"></i></a>
+                  <a href="https://github.com/alfredosalgado" target="_blank" title="Github"><i class="fa-brands fa-github pt-1 px-3"></i></i></a>
+                  <a href="https://x.com/11jose_alfredo" target="_blank" title="X"><i class="fa-solid fa-x pt-1 px-3"></i></a>
                   <a href="https://www.instagram.com/joshegram" target="_blank" title="Instagram"><i class="fa-brands fa-square-instagram pt-1 px-3"></i></a>
                   <a href="https://www.linkedin.com/in/alfredo-salgado-riquelme-425aa830/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin pt-1 px-3"></i></a>
                   <a href="https://wa.me/message/RP6ITSACWIYMM1" target="_blank" title="Whatsapp"><i class="fa-brands fa-whatsapp pt-1 px-3"></i></a>
